align fixes

--- a/style.css
+++ b/style.css
@@ -35,11 +35,14 @@ body{
   padding: 0;
 }
 section{
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-block: auto;
-  height: calc(100% + 10rem);
+  height: 100%;
+  min-height: 100vh;
   width: 100%;
+  
 }
 .wrapper{
   display: flex;
@@ -171,6 +174,10 @@ button:hover, button:focus-visible{
   padding: 1rem;
   font-size: 1.6rem !important;
 }
+.attribution p{
+  padding: 0;
+  margin: 0;
+}
 .attribution a, .attribution a:visited{
   font-size: 1.6rem !important;
   color: #FF931E;
@@ -178,10 +185,12 @@ button:hover, button:focus-visible{
 
 
 @media (max-width: 600px) {
+  section{  
+    min-height: calc(100vh + 5rem);
+  }
   .wrapper{
     margin: 0 auto auto;
     flex-direction: column;
-    min-height: 100vw;
     border-radius: 0 0 40px 40px;
   }
   .block{
